--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UNISHOP ecommerce website</title>
+    <title>MPR ecommerce website</title>
 
     <!--Scroll Reveal Js-->
     <script src="https://unpkg.com/scrollreveal"></script>
@@ -34,7 +34,7 @@
     <!-------Main Nav-------->
     <nav class="nav">
         <div class="container nav_container">
-            <a href="#" class="nav_logo">UNISHOP</a>
+            <a href="#" class="nav_logo">MPR</a>
             <ul class="nav_list">
                 <li class="nav_item"><a href="/" class="nav_link">Home</a></li>
                 <li class="nav_item"><a href="#" class="nav_link">About Us</a></li>
@@ -125,10 +125,10 @@
             <div class="footer_items">
                 <h3 class="footer_title">Support</h3>
                 <ul class="footer_list">
-                    <li class="li footer_itm">S-22 Rajiv Nagar, India</li>
-                    <li class="li footer_itm">unishop@gmail.com</li>
-                    <li class="li footer_itm">+91 6535784514</li>
-                    <li class="li footer_itm">+91 3669578123</li>
+                    <li class="li footer_itm">S-22 kasturi bai Nagar, India</li>
+                    <li class="li footer_itm">mprshop@gmail.com</li>
+                    <li class="li footer_itm">+91 6383740735</li>
+                    <li class="li footer_itm">+91 781602241</li>
                 </ul>
             </div>
             <div class="footer_items">
@@ -153,7 +153,7 @@
         <div class="bottom">
             <div class="container bottom_container">
                 <p class="copyright">
-                    © Copyright Unishop 2024. All rights reserved
+                    © Copyright Unishop 2025. All rights reserved
                 </p>
             </div>
         </div>
